# evorbrain

./: .commitlintrc.js  .commitlintrc.json  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .gitmessage  .prettierignore  .prettierrc.json  CHANGELOG.md  CLEANUP_SUMMARY.md  LICENSE  PLANNING.md  PROJECT_UPDATE.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  eslint.config.js  lighthouserc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  tsconfig.json
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-fast.yml  ci.yml  code-quality.yml  docs.yml  pr.yml  release.yml  windows-dev.yml
.husky/: README.md  prepare-commit-msg
apps/desktop/: .eslintrc.cjs  .eslintrc.json  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  file-scope.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: entities.rs  filesystem.rs  mod.rs  relationships.rs
apps/desktop/src-tauri/src/database/: mod.rs  pool.rs  search.rs
apps/desktop/src-tauri/src/errors/: mod.rs  utils.rs
apps/desktop/src-tauri/src/filesystem/: mod.rs  operations.rs  validation.rs  watcher.rs
apps/desktop/src-tauri/src/models/: mod.rs
apps/desktop/src-tauri/src/tests/: area_tests.rs  goal_tests.rs  mod.rs  project_tests.rs  relationship_tests.rs  task_tests.rs
apps/desktop/src-tauri/src/utils/: mod.rs
apps/desktop/src/app/layout/: AppLayout.tsx
apps/desktop/src/app/routes/: ProtectedRoute.tsx  index.ts  router.tsx  routes.ts  utils.ts
apps/desktop/src/features/error-testing/: index.ts
apps/desktop/src/features/navigation/: index.ts
apps/desktop/src/pages/Settings/: Settings.tsx
apps/desktop/src/pages/area-detail/: AreaDetailPage.tsx
apps/desktop/src/test/: setup.ts
backend/: package.json  tsconfig.json
backend/src/: index.ts
backend/src/database/: connection.ts
backend/src/middleware/: error-handler.ts
backend/src/routes/: index.ts
backend/src/websocket/: handler.ts
docs/: data-model.md  development-setup.md
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx  Layout.tsx  Navigation.tsx
frontend/src/pages/: Dashboard.tsx  Goals.tsx  LifeAreas.tsx  Projects.tsx  Settings.tsx  Tasks.tsx
scripts/: build-config.js  generate-dev-certs.sh  test-window.sh  trust-dev-certs.sh
shared/: package.json  tsconfig.json
shared/src/constants/: index.ts
shared/src/types/: index.ts
shared/src/validation/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+18 files in other folders)
